--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "name": "Manish Nautiyal",
     "email": ""
   },
-  "dependencies": {
-    "express": "~3.4.8"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "express": "^3.4.8",
     "vash": "^0.12.4"
   }
 }
