Added grunt, bower and bootstrp css

--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "bower": "^1.8.4",
     "express": "^3.4.8",
+    "grunt": "^1.0.3",
+    "grunt-cli": "^1.3.1",
+    "grunt-nodemon": "^0.4.2",
     "vash": "^0.12.4"
   }
 }
